# toucan-persistence-example

./: .coverage.yml  .drone.yml  .gitignore  .golangci.yml  .yamllint.yml  CHANGELOG.md  DEVELOPER.md  Makefile  README.md  README.rst  architecture_design_record.md  db.go  go.mod  go.sum  setup.cfg  sqlite-database.db
.github/: CODEOWNERS  pull_request_template.md
api/: .editorconfig
api/proto/piratetreasure/: README.md  embed.go  grpc-gateway.yaml  piratetreasure.pb.go  piratetreasure.pb.gw.go  piratetreasure.proto  piratetreasure.swagger.json  piratetreasure_grpc.pb.go  piratetreasure_pb2.py  piratetreasure_pb2_grpc.py
cmd/piratetreasure/: main.go
cmd/piratetreasure/cmd/: health.go  invoke.go  root.go  serve.go  version.go
docs/arch/decisions/: 0001-Example.md
functests/: functional.go
functests/cmd/: cmd_base_test.go  version_test.go
internal/handlers/: README.md  hello.go  hello_test.go  swagger.go  swagger_test.go
internal/persistence/: sqlite_repository.go  treasure_repository.go
scripts/: getnrc  waitForSandbox.sh
