[build]
executable = /usr/bin/env python

[pycodestyle]
ignore = W391,E121,E123,E126,E226,E24,E704,E302,E221

[metadata]
name = piratetreasure
version = v0.0.0
description = A grpc client for piratetreasure
long_description = file: README.rst
keywords = client
license = Copyright © 2022 Netskope
url = https://github.com/netskope/piratetreasure
author = author
classifiers =
    Framework :: Pytest,
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
    Private :: Do Not Upload
author-email = svulpius@netskope.com

[options]
zip_safe = False
include_package_data = True
py_modules=api.proto.piratetreasure_pb2_grpc, api.proto.piratetreasure_pb2
scripts =
install_requires =
dependency_links =

[options.package_data]
* = *.txt, *.rst
